[package]
name = "generic-lexer"
version = "0.2.0"
authors = ["Cameron Phillips <cameron0505@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
description = "A generic lexer using a simple match function"
repository = "https://github.com/cameronp98/generic-lexer.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
